fix visibility methods in case of incomplete animation

--- a/test/animation.html
+++ b/test/animation.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Animation test</title>
     <meta name="viewport" content="width=device-width,user-scalable=no">
+    <!--[if IE]>
+        <link href="../dist/better-dom-legacy.htc" rel="htc" />
+        <script src="../build/better-dom-legacy.js"></script>
+    <![endif]-->
     <script src="../build/better-dom.js"></script>
     <style>
     #bar {
