stopImmediatePropagation -> stopPropagation because of Chrome issue

--- a/test/animation.html
+++ b/test/animation.html
@@ -65,13 +65,9 @@
             if (el.parent() == "") {
                 bar[index ? "append" : "prepend"](el);
 
-                el.show(function() {
-                    console.log("show");
-                });
+                el.show();
             } else {
                 el.hide(function() {
-                    console.log("hide");
-
                     el.remove();
                 });
             }
