return DOM.template -> DOM.emmet back

--- a/test/specs.html
+++ b/test/specs.html
@@ -46,5 +46,6 @@
     <script src="spec/node.functional.spec.js"></script>
     <script src="spec/dom.importscripts.spec.js"></script>
     <script src="spec/element.watch.spec.js"></script>
+    <script src="spec/dom.emmet.spec.js"></script>
 </head>
 </html>
