polyfills are external now, update compile task

--- a/test/specs.html
+++ b/test/specs.html
@@ -13,6 +13,8 @@
 
     <!--[if IE]>
         <link href="../dist/better-dom-legacy.htc" rel="htc" />
+        <script src="../bower_components/es5-shim/es5-shim.js"></script>
+        <script src="../bower_components/html5shiv/src/html5shiv.js"></script>
         <script src="../build/better-dom-legacy.js"></script>
     <![endif]-->
 
