introduce DOM.constructor and fix specs

--- a/test/specs.html
+++ b/test/specs.html
@@ -23,6 +23,8 @@
     <script src="../build/better-dom.js"></script>
 
     <!-- include spec files here... -->
+    <script src="spec/dom.emmet.spec.js"></script>
+    <script src="spec/dom.constructor.spec.js"></script>
     <script src="spec/node.spec.js"></script>
     <script src="spec/node.find.spec.js"></script>
     <script src="spec/node.dispatch.spec.js"></script>
@@ -48,6 +50,5 @@
     <script src="spec/node.functional.spec.js"></script>
     <script src="spec/dom.importscripts.spec.js"></script>
     <script src="spec/element.watch.spec.js"></script>
-    <script src="spec/dom.emmet.spec.js"></script>
 </head>
 </html>
