--- a/test/specs.html
+++ b/test/specs.html
@@ -41,7 +41,7 @@
     <script src="spec/element.offset.spec.js"></script>
     <script src="spec/dom.create.spec.js"></script>
     <script src="spec/element.manipulation.spec.js"></script>
-    <script src="spec/element.style.spec.js"></script>
+    <script src="spec/element.css.spec.js"></script>
     <script src="spec/dom.extend.spec.js"></script>
     <script src="spec/dom.mock.spec.js"></script>
     <script src="spec/node.functional.spec.js"></script>
