IE8 fixes and refactoring

--- a/test/specs.html
+++ b/test/specs.html
@@ -14,7 +14,7 @@
     <!--[if IE]>
         <link href="../dist/better-dom-legacy.htc" rel="htc" />
         <script src="../bower_components/es5-shim/es5-shim.js"></script>
-        <script src="../bower_components/html5shiv/src/html5shiv.js"></script>
+        <script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
         <script src="../build/better-dom-legacy.js"></script>
     <![endif]-->
 
@@ -25,14 +25,14 @@
     <!-- include spec files here... -->
     <script src="spec/dom.emmet.spec.js"></script>
     <script src="spec/dom.constructor.spec.js"></script>
-    <script src="spec/node.spec.js"></script>
-    <script src="spec/node.find.spec.js"></script>
-    <script src="spec/node.dispatch.spec.js"></script>
+    <script src="spec/element.tostring.spec.js"></script>
+    <script src="spec/element.find.spec.js"></script>
+    <script src="spec/element.dispatch.spec.js"></script>
     <script src="spec/element.clone.spec.js"></script>
-    <script src="spec/node.contains.spec.js"></script>
-    <script src="spec/node.on.spec.js"></script>
-    <script src="spec/node.off.spec.js"></script>
-    <script src="spec/node.fire.spec.js"></script>
+    <script src="spec/element.contains.spec.js"></script>
+    <script src="spec/element.on.spec.js"></script>
+    <script src="spec/element.off.spec.js"></script>
+    <script src="spec/element.fire.spec.js"></script>
     <script src="spec/element.get.spec.js"></script>
     <script src="spec/element.set.spec.js"></script>
     <script src="spec/element.traversing.spec.js"></script>
@@ -44,10 +44,9 @@
     <script src="spec/element.css.spec.js"></script>
     <script src="spec/dom.extend.spec.js"></script>
     <script src="spec/dom.mock.spec.js"></script>
-    <script src="spec/node.functional.spec.js"></script>
     <script src="spec/dom.importstyles.spec.js"></script>
     <script src="spec/element.visibility.spec.js"></script>
-    <script src="spec/node.functional.spec.js"></script>
+    <script src="spec/element.functional.spec.js"></script>
     <script src="spec/dom.importscripts.spec.js"></script>
     <script src="spec/element.watch.spec.js"></script>
 </head>
