drop better-dom-legacy.js logic, better-dom-legacy.htc -> better-dom.htc

--- a/test/specs.html
+++ b/test/specs.html
@@ -12,10 +12,9 @@
     <script src="../bower_components/jasmine/lib/jasmine-core/boot.js"></script>
 
     <!--[if IE]>
-        <link href="../dist/better-dom-legacy.htc" rel="htc" />
+        <link href="../dist/better-dom.htc" rel="htc" />
         <script src="../bower_components/es5-shim/es5-shim.js"></script>
         <script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
-        <script src="../build/better-dom-legacy.js"></script>
     <![endif]-->
 
     <script src="lib/jasmine-better-dom-matchers.js"></script>
