fix children method, update jsdocs

--- a/test/specs.html
+++ b/test/specs.html
@@ -46,5 +46,6 @@
     <script src="spec/element.visibility.spec.js"></script>
     <script src="spec/dom.importscripts.spec.js"></script>
     <script src="spec/element.watch.spec.js"></script>
+    <script src="spec/element.children.spec.js"></script>
 </head>
 </html>
