add DOM.noConflict spec

--- a/test/specs.html
+++ b/test/specs.html
@@ -47,5 +47,6 @@
     <script src="spec/dom.importscripts.spec.js"></script>
     <script src="spec/element.watch.spec.js"></script>
     <script src="spec/element.children.spec.js"></script>
+    <script src="spec/dom.noconflict.spec.js"></script>
 </head>
 </html>
