DOM.importStyles now supports at-rules

--- a/test/animation.html
+++ b/test/animation.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="UTF-8">
     <title>Animation test</title>
     <meta name="viewport" content="width=device-width,user-scalable=no">
