--- a/test/context.html
+++ b/test/context.html
@@ -7,7 +7,6 @@
     <style>
     body {
         color: red;
-        background: #EEE;
     }
 
     .test-context {
@@ -31,8 +30,16 @@
     <script src="../build/better-dom.js"></script>
     <script>
     DOM.find("p+p").context("test-context", function(root) {
-        root.find("body").css("background", "#FFF").append(
-            DOM.emmet("div>`Sandbox text`^input[value=`input$`]*2"));
+        root.find("body").css({background: "#EEE"}).append(
+            DOM.emmet("div>`Test context text has default text color`^input[value=`input$`]*2"));
+
+        // var span = root.get("ownerDocument").createElement("span");
+
+        // span.innerHTML = "dynamic span";
+
+        // root.find("body")[0].appendChild(span);
+
+        // root.find("body").append(DOM.create("span>`dynamic span`"));
     });
     </script>
 </body>
