--- a/test/context.html
+++ b/test/context.html
@@ -34,12 +34,10 @@
     <script src="../build/better-dom.js"></script>
     <script>
     DOM.find("p+p").context("test-context", function(root) {
-        var body = root.find("body");
+        root.importStyles("body", "background: #F00; margin: 0");
 
-        body.css({background: "#F00"}).append(DOM.emmet(
+        root.find("body").append(root.createAll(
             "div>`Test context text has default text color`^input[value=`input$`]*2"));
-
-        body.append(root.create("span>`dynamic span`"));
     });
     </script>
 </body>
